Change link to CSS file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- 'meta' tag is the metadata element. utf-8 is a standard encoding for most text on the web.
       Using utf-8 encoding gives your site the maximum chance of being displayed in any browser. -->
   <title>Aswin's intermediate level Personal Site</title><!-- Tiltle displayed on top of the tab when site opens in the browser-->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
